[package]
name = "keyboard_query"
version = "0.1.0"
authors = ["YXL <chenxin.lan.76@gmail.com>"]
build = "build.rs"
description = ""
homepage = "https://github.com/YXL76/keyboard_query"
repository = "https://github.com/YXL76/keyboard_query"
readme = "README.md"
keywords = ["input", "keyboard"]
license = "MIT"

[build-dependencies]
pkg-config = "0.3.18"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = {version = "2.18.2", features = ["xlib"] }

[target.'cfg(target_os = "windows")'.dependencies]
user32-sys = "0.2.0"
