[package]
name = "device_query"
version = "0.2.8"
authors = ["ostrosco <ostrosco@fastmail.fm>"]
build = "build.rs"
description = "A basic library for querying keyboard and mouse state on-demand without a window."
homepage = "https://github.com/ostrosco/device_query"
repository = "https://github.com/ostrosco/device_query"
readme = "README.md"
keywords = ["input", "mouse", "keyboard"]
license = "MIT"

[badges]
travis-ci = { repository = "ostrosco/device_query" }

[build-dependencies]
pkg-config = "0.3.9"

[dependencies]
lazy_static = "1.4.0"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = {version = "2.17.2", features = ["xlib"] }
input-event-codes = "0.2.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"]}

[target.'cfg(target_os = "macos")'.dependencies]
readkey = "0.1.7"
readmouse = "0.2.0"
