[package]
name = "device_query"
version = "2.1.0"
authors = ["ostrosco <ostrosco@fastmail.fm>"]
build = "build.rs"
description = "A basic library for querying keyboard and mouse state on-demand without a window."
homepage = "https://github.com/ostrosco/device_query"
repository = "https://github.com/ostrosco/device_query"
readme = "README.md"
keywords = ["input", "mouse", "keyboard"]
license = "MIT"

[badges]
travis-ci = { repository = "ostrosco/device_query" }

[build-dependencies]
pkg-config = "0.3.26"

[dependencies]

[target.'cfg(target_os = "linux")'.dependencies]
x11 = {version = "2.21.0", features = ["xlib"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = {version = "0.48.0", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Foundation"]}

[target.'cfg(target_os = "macos")'.dependencies]
readkey = "0.2.1"
readmouse = "0.2.1"
macos-accessibility-client = "0.0.1"
